--- a/beginning/index.html
+++ b/beginning/index.html
@@ -11,30 +11,40 @@
         h1 {margin-bottom: 30px;}
         label {font-weight: bold;}
         input, select {margin-bottom: 10px;}
-        form {width: 30%; padding: 20px;}
+        form {width: 30%; padding: 20px; border-style: solid; border-color: orange; background-color: lightgrey;}
     </style>
 </head>
 <body class="mt-2 ml-4">
-    <h1>Employee Management System</h1>
+    <p class="h1">Employee Management System</p>
     <form id="empForm">
-        <label for="">8-Digit Employee ID</label><br>
-        <input type="text" id="id" maxlength="8" required><br>
-        <label for="">Name</label><br>
-        <input type="text" id="name" required><br>
-        <label for="">4-Digit Extension</label><br>
-        <input type="text" id="ext" maxlength="4" required><br>
-        <label for="">Email</label><br>
-        <input type="email" id="email" required><br>
-        <label for="">Department</label><br>
-        <select name="department" id="department" required>
-            <option value="Administrive">Administrive</option>
-            <option value="Engineering">Engineering</option>
-            <option value="Executive">Executive</option>
-            <option value="Marketing">Marketing</option>
-            <option value="Quality Assurance">Quality Assurance</option>
-            <option value="Sales">Sales</option>
-        </select><br>
-        <button type="submit" id="submit">Add Employee</button>
+        <div class="mb-3">
+            <label for="" class="form-label">8-Digit Employee ID</label>
+            <input type="text" id="id" class="form-control" maxlength="8" required>
+        </div>
+        <div class="mb-3">
+            <label for="" class="form-label">Name</label>
+            <input type="text" id="name" class="form-control" required>
+        </div>
+        <div class="mb-3">
+            <label for="" class="form-label">4-Digit Extension</label>
+            <input type="text" id="ext" class="form-control" maxlength="4" required>
+        </div>
+        <div class="mb-3">
+            <label for="" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" required>
+        </div>
+        <div class="mb-3">
+            <label for="" class="form-label">Department</label>
+            <select name="department" id="department" class="form-control" required>
+                <option value="Administrive">Administrive</option>
+                <option value="Engineering">Engineering</option>
+                <option value="Executive">Executive</option>
+                <option value="Marketing">Marketing</option>
+                <option value="Quality Assurance">Quality Assurance</option>
+                <option value="Sales">Sales</option>
+            </select>
+        </div>
+            <button type="submit" id="submit" class="btn btn-primary">Add Employee</button>
     </form>
 </body>
 </html>
